# stray

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cleanup  configure  configure.ac  stray.Rproj
R/: RcppExports.R  bassetfit_s3.R  fit_basset.R  fit_maltipoo.R  fit_mongrel.R  fit_orthus.R  fit_pibble.R  foo.R  foo.test.R  foo2.R  foo_matrix_t_density.R  foo_multivariatenormal_density.R  generics_s3.R  iqlr.R  kernels.R  mallard-data.R  mallard_family-data.R  maltipoo_sim.R  maltipoofit_s3.R  mongrel.R  mongrel_methods.R  mongrel_plotting.R  mongrel_sim.R  mongrel_transforms.R  mongrel_utils.R  mongrelfit_methods.R  mongrelfit_s3.R  open_mp_status.R.in  orthus_sim.R  orthus_transform_wrapper.R  pibble_plotting.R  pibble_sim.R  stray.R  stray_transforms.R  stray_utils.R  strayfit_methods.R  strayfit_s3.R  tmp.R
data/: .Rapp.history  mallard.RData  mallard_family.RData
docs/: 404.html  authors.html  index.html  pkgdown.yml
docs/articles/: index.html  introduction-to-stray.html  non-linear-models.html  orthus.html  picking_priors.html
docs/news/: index.html
docs/reference/: access_dims.html  as.list.orthusfit.html  as.list.pibblefit.html  as.orthusfit.html  as.pibblefit.html  basset_fit.html  check_dims.html  coef.orthusfit.html  coef.pibblefit.html  compiled_with_openmp.html  conjugateLinearModel.html  convert_orthus_covariance.html  hessVectorProd.html  index.html  kernels.html  lambda_to_iqlr.html  lmvgamma.html  lmvgamma_deriv.html  loglikMaltipooCollapsed.html  loglikPibbleCollapsed.html  mallard.html  name.html  (+48 more)
inst/: CITATION  NEWS
man/: access_dims.Rd  add_array_dim.Rd  as.list.mongrelfit.Rd  as.list.orthusfit.Rd  as.list.pibblefit.Rd  as.orthusfit.Rd  as.pibblefit.Rd  basset_fit.Rd  check_dims.Rd  coef.mongrelfit.Rd  coef.orthusfit.Rd  coef.pibblefit.Rd  compiled_with_openmp.Rd  conjugateLinearModel.Rd  convert_orthus_covariance.Rd  fit_mongrel.Rd  gradMaltipooCollapsed.Rd  hessMaltipooCollapsed.Rd  hessVectorProd.Rd  hyperpar_grad_gamma.Rd  kernels.Rd  lambda_to_iqlr.Rd  lineSearch.Rd  lmvgamma.Rd  lmvgamma_deriv.Rd  loglikMaltipooCollapsed.Rd  loglikMongrelCollapsed.Rd  loglikPibbleCollapsed.Rd  mallard.Rd  mallard_family.Rd  maltipoo_fit.Rd  maltipoofit.Rd  mongrel-deprecated.Rd  mongrel-package.Rd  mongrel.Rd  mongrel_fit.Rd  mongrel_package.Rd  mongrel_sim.Rd  mongrel_tidy_samples.Rd  mongrel_transforms.Rd  (+59 more)
src/: ConjugateLinearModel.cpp  Makevars  Makevars.in  Makevars.win  MaltipooCollapsed_LGH.cpp  MaltipooCollapsed_Optim.cpp  MatrixAlgebra.cpp  MongrelCollapsed_LGH.cpp  MongrelCollapsed_Optim.cpp  MongrelCollapsed_Uncollapse.cpp  MultimMatTCollapsed_Optim.cpp  MultimMatTCollapsed_Uncollapse.cpp  PibbleCollapsed_LGH.cpp  PibbleCollapsed_Optim.cpp  PibbleCollapsed_Uncollapse.cpp  RcppExports.cpp  SpecialFunctions.cpp  test_LaplaceApproximation.cpp  test_MultDirichletBoot.cpp  test_TruncatedLaplaceApproximation.cpp  test_utils.cpp
tests/: testthat.R
vignettes/: bibliography.bib  introduction-to-mongrel.Rmd  introduction-to-stray.Rmd  non-linear-models.Rmd  orthus.Rmd  picking_priors.Rmd
(+37 files in other folders)
